Configued Sql Server

--- a/ShoppingListWebAPI.Server/appsettings.json
+++ b/ShoppingListWebAPI.Server/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ShoppingListContext": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=ShoppingList;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ShoppingListContext": "Server=(localdb)\\MSSQLLocalDB;Initial Database=ShoppingList;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
