Try to create depndency injection to my db options

--- a/ShoppingListWebAPI.Server/ShoppingListWebAPI.Server.csproj
+++ b/ShoppingListWebAPI.Server/ShoppingListWebAPI.Server.csproj
@@ -8,6 +8,7 @@
     <SpaRoot>..\shoppinglistwebapi.client</SpaRoot>
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
     <SpaProxyServerUrl>https://localhost:5173</SpaProxyServerUrl>
+    <UserSecretsId>32a4a9b7-630b-48ac-8aa4-155b169a442a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,6 +28,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
