--- a/ShoppingListWebAPI.Server/appsettings.Development.json
+++ b/ShoppingListWebAPI.Server/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ShoppingListContext": "Server=(localdb)\\mssqllocaldb;Database=ShoppingList;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ShoppingList": "Server=(localdb)\\mssqllocaldb;Database=ShoppingList;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
