Define categories state for the front

--- a/ShoppingListWebAPI.Server/appsettings.json
+++ b/ShoppingListWebAPI.Server/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ShoppingList": "Server=(localdb)\\MSSQLLocalDB;Initial Database=ShoppingList;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ShoppingList": "Server=(localdb)\\mssqllocaldb;Initial Database=ShoppingList;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
