--- a/shoppinglistwebapi.client/package.json
+++ b/shoppinglistwebapi.client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@mui/x-data-grid": "^6.19.5",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "install": "^0.13.0",
